k8s/common/thingsboard.yml
#
# Copyright © 2016-2021 The Thingsboard Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

apiVersion: apps/v1
kind: Deployment
metadata:
  name: tb-js-executor
  namespace: thingsboard
spec:
  replicas: 20
  selector:
    matchLabels:
      app: tb-js-executor
  template:
    metadata:
      labels:
        app: tb-js-executor
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: server
        imagePullPolicy: Always
        image: thingsboard/tb-pe-js-executor:latest
      restartPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tb-web-report
  namespace: thingsboard
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tb-web-report
  template:
    metadata:
      labels:
        app: tb-web-report
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: server
        imagePullPolicy: Always
        image: thingsboard/tb-pe-web-report:latest
        ports:
        - containerPort: 8383
          name: http
        readinessProbe:
          periodSeconds: 20
          tcpSocket:
            port: 8383
        livenessProbe:
          periodSeconds: 20
          tcpSocket:
            port: 8383
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: tb-web-report
  namespace: thingsboard
spec:
  type: ClusterIP
  selector:
    app: tb-web-report
  ports:
  - port: 8383
    name: http
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: tb-mqtt-transport
  namespace: thingsboard
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tb-mqtt-transport
  template:
    metadata:
      labels:
        app: tb-mqtt-transport
    spec:
      volumes:
        - name: tb-mqtt-transport-config
          configMap:
            name: tb-mqtt-transport-config
            items:
            - key: conf
              path:  tb-mqtt-transport.conf
            - key: logback
              path:  logback.xml
      imagePullSecrets:
        - name: regcred
      containers:
      - name: server
        imagePullPolicy: Always
        image: thingsboard/tb-pe-mqtt-transport:latest
        ports:
        - containerPort: 1883
          name: mqtt
        volumeMounts:
          - mountPath: /config
            name: tb-mqtt-transport-config
        readinessProbe:
          periodSeconds: 20
          tcpSocket:
            port: 1883
        livenessProbe:
          initialDelaySeconds: 120
          periodSeconds: 20
          tcpSocket:
            port: 1883
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: tb-mqtt-transport
  namespace: thingsboard
spec:
  type: LoadBalancer
  selector:
    app: tb-mqtt-transport
  ports:
  - port: 1883
    targetPort: 1883
    name: mqtt
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tb-http-transport
  namespace: thingsboard
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tb-http-transport
  template:
    metadata:
      labels:
        app: tb-http-transport
    spec:
      volumes:
        - name: tb-http-transport-config
          configMap:
            name: tb-http-transport-config
            items:
            - key: conf
              path:  tb-http-transport.conf
            - key: logback
              path:  logback.xml
      imagePullSecrets:
        - name: regcred
      containers:
      - name: server
        imagePullPolicy: Always
        image: thingsboard/tb-pe-http-transport:latest
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
          - mountPath: /config
            name: tb-http-transport-config
        readinessProbe:
          periodSeconds: 20
          tcpSocket:
            port: 8080
        livenessProbe:
          initialDelaySeconds: 120
          periodSeconds: 20
          tcpSocket:
            port: 8080
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: tb-http-transport
  namespace: thingsboard
spec:
  type: ClusterIP
  selector:
    app: tb-http-transport
  ports:
  - port: 8080
    name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tb-coap-transport
  namespace: thingsboard
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tb-coap-transport
  template:
    metadata:
      labels:
        app: tb-coap-transport
    spec:
      volumes:
        - name: tb-coap-transport-config
          configMap:
            name: tb-coap-transport-config
            items:
            - key: conf
              path:  tb-coap-transport.conf
            - key: logback
              path:  logback.xml
      imagePullSecrets:
        - name: regcred
      containers:
      - name: server
        imagePullPolicy: Always
        image: thingsboard/tb-pe-coap-transport:latest
        ports:
        - containerPort: 5683
          name: coap
          protocol: UDP
        volumeMounts:
          - mountPath: /config
            name: tb-coap-transport-config
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: tb-coap-transport
  namespace: thingsboard
spec:
  type: LoadBalancer
  selector:
    app: tb-coap-transport
  ports:
  - port: 5683
    name: coap
    protocol: UDP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tb-web-ui
  namespace: thingsboard
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tb-web-ui
  template:
    metadata:
      labels:
        app: tb-web-ui
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: server
        imagePullPolicy: Always
        image: thingsboard/tb-pe-web-ui:latest
        ports:
        - containerPort: 8080
          name: http
        livenessProbe:
          httpGet:
            path: /index.html
            port: http
          initialDelaySeconds: 120
          timeoutSeconds: 10
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: tb-web-ui
  namespace: thingsboard
spec:
  type: ClusterIP
  selector:
    app: tb-web-ui
  ports:
  - port: 8080
    name: http
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: tb-ingress
  namespace: thingsboard
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
spec:
  rules:
  - http:
      paths:
      - path: /api/v1/.*
        backend:
          serviceName: tb-http-transport
          servicePort: 8080
      - path: /api/.*
        backend:
          serviceName: tb-node
          servicePort: 8080
      - path: /swagger.*
        backend:
          serviceName: tb-node
          servicePort: 8080
      - path: /webjars.*
        backend:
          serviceName: tb-node
          servicePort: 8080
      - path: /v2/.*
        backend:
          serviceName: tb-node
          servicePort: 8080
      - path: /static/rulenode/.*
        backend:
          serviceName: tb-node
          servicePort: 8080
      - path: /oauth2/.*
        backend:
          serviceName: tb-node
          servicePort: 8080
      - path: /login/oauth2/.*
        backend:
          serviceName: tb-node
          servicePort: 8080
      - path: /
        backend:
          serviceName: tb-web-ui
          servicePort: 8080
      - path: /.*
        backend:
          serviceName: tb-web-ui
          servicePort: 8080
---
